tests/machine/x/pascal/left_join_multi.error
line: 68
error: fpc error: exit status 1
Free Pascal Compiler version 3.2.2+dfsg-32 [2024/01/05] for x86_64
Copyright (c) 1993-2021 by Florian Klaempfl and others
Target OS: Linux for x86-64
Compiling /workspace/mochi/tests/machine/x/pascal/left_join_multi.pas
left_join_multi.pas(32,16) Error: Illegal type conversion: "{Array Of Const/Constant Open} Array of TFPGMap$2$crcA49C6E68" to "TArray$1$crcE0B4E8C7"
left_join_multi.pas(39,13) Error: Illegal type conversion: "{Array Of Const/Constant Open} Array of TFPGMap$2$crcDFB44C97" to "TArray$1$crc7ED07D64"
left_join_multi.pas(43,12) Error: Illegal type conversion: "{Array Of Const/Constant Open} Array of TFPGMap$2$crcA49C6E68" to "TArray$1$crcE0B4E8C7"
left_join_multi.pas(45,35) Error: identifier idents no member "id"
left_join_multi.pas(46,30) Error: Identifier not found "c"
left_join_multi.pas(47,30) Error: Identifier not found "i"
left_join_multi.pas(51,11) Error: Identifier not found "c"
left_join_multi.pas(53,22) Error: identifier idents no member "customerId"
left_join_multi.pas(53,35) Error: Identifier not found "c"
left_join_multi.pas(54,15) Error: Identifier not found "i"
left_join_multi.pas(56,26) Error: identifier idents no member "id"
left_join_multi.pas(56,31) Error: Identifier not found "i"
left_join_multi.pas(57,45) Error: Incompatible types: got "{Array Of Const/Constant Open} Array of TFPGMap$2$crcA49C6E68" expected "TArray$1$crcE0B4E8C7"
left_join_multi.pas(57,39) Error: Incompatible types: got "TFPGMap<System.Variant,System.Variant>" expected "TFPGMap<System.ShortString,System.Variant>"
left_join_multi.pas(65,17) Error: identifier idents no member "orderId"
left_join_multi.pas(65,33) Error: identifier idents no member "name"
left_join_multi.pas(65,46) Error: identifier idents no member "item"
left_join_multi.pas(68) Fatal: There were 17 errors compiling module, stopping
Fatal: Compilation aborted
Error: /usr/bin/ppcx64 returned an error exitcode

